--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,302 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap');
+
+/* Banner.css */
+.dm-serif-display-regular {
+  font-family: "DM Serif Display", serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.dm-serif-display-regular-medium {
+  font-family: "DM Serif Display", serif;
+  font-weight: 400;
+  font-style: italic;
+  font-size: 40px;
 }
+
+.banner-container {
+  position: relative;
+  background-image: url('../src/assets/luxury-plain-green-gradient-abstract-studio-background-empty-room-with-space-your-text-picture.jpg');
+  background-size: cover;
+  background-position: center;
+}
+
+.banner-content {
+  position: relative;
+  z-index: 2;
+}
+
+.btn-custom {
+  background-color: var(--color-gray-900); 
+  color: var(--color-white);
+  border-radius: 25px; 
+  border: none; 
+  padding: 1% 3%;
+}
+
+.btn-custom:hover {
+  background-color: #59CE72; 
+  color: var(--color-gray-900); 
+}
+
+/* CardHome.css */
+.custom-card {
+  background-color:var(--color-bg); 
+  color: var(--color-white); 
+}
+
+.custom-card-body {
+  background-color: var(--color-bg); 
+  color: var(--color-gray-900); 
+  border-color: var(--color-gray-900);
+  border-width: 2px;
+  padding: 3rem;
+}
+
+.custom-card-button {
+  background-color: var(--color-primary); 
+  border-radius: 25px; 
+  border: none; 
+  padding: 2% 4%;
+  color: var(--color-gray-900);
+}
+
+.custom-card-button:hover {
+  background-color: var(--color-gray-900);
+  color: var(--color-white);
+}
+
+/* Adiciona uma borda inferior animada aos itens de navegação */
+.navbar-nav .nav-item {
+  position: relative;
+  overflow: hidden;
+}
+
+.navbar-nav .nav-link {
+  position: relative;
+  display: inline-block;
+  padding-bottom: 0.5rem;
+  color: var(--color-gray-900); 
+  transition: color 0.3s;
+}
+
+.navbar-nav .nav-link::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 2px;
+  width: 100%;
+  background-color: var(--color-primary); 
+  transform: translateX(-100%);
+  transition: transform 0.3s ease;
+}
+
+.navbar-nav .nav-link:hover::after {
+  transform: translateX(0);
+}
+
+.custom-create-button {
+  background-color: var(--color-primary); 
+  border-radius: 25px; 
+  border: none; 
+  padding: 1% 4%;
+  color: var(--color-gray-900);
+}
+
+.custom-create-button:hover {
+  background-color: var(--color-gray-900);
+  color: var(--color-white);
+  transition: var(--transition);
+}
+
+.custom-login-button {
+  background-color: var(--color-gray-900);
+  border-radius: 25px; 
+  border: none; 
+  padding: 1% 4%;
+  color: var(--color-gray-900);
+  color: var(--color-white);
+}
+
+.custom-login-button:hover {
+  background-color: #59CE72;
+  color: var(--color-white);
+  transition: var(--transition);
+}
+
+.custom-userskill-button {
+  background-color: var(--color-primary); 
+  border-radius: 25px; 
+  border: none; 
+  padding: 0.5% 2%;
+  color: var(--color-gray-900);
+}
+
+.custom-userskill-button:hover {
+  background-color: var(--color-gray-900);
+  color: var(--color-white);
+  transition: var(--transition);
+}
+
+.custom-delete-button {
+  background-color: var(--color-red); 
+  border-radius: 25px; 
+  border: none; 
+  padding: 1% 4%;
+  color: var(--color-white);
+}
+
+.custom-delete-button:hover {
+  background-color: var(--color-gray-900);
+  color: var(--color-white);
+  transition: var(--transition);
+}
+
+
+:root {
+  --color-primary: #adebb3;
+
+  --color-white: #fff;
+  --color-red: rgb(255, 63, 63);
+  --color-gray-100: hsl(220, 20%, 10%, 5%);
+  --color-gray-200: hsl(220, 20%, 10%, 10%);
+  --color-gray-300: hsl(220, 20%, 10%, 25%);
+  --color-gray-500: hsl(220, 20%, 10%, 50%);
+  --color-gray-700: #252542;
+  --color-gray-900: #333333;
+  
+
+  --color-bg: hwb(240, 95%, 0%);
+
+  --transition: all 300ms ease;
+
+  --container-width-lg: 84%;
+  --container-width-md: 92%;
+  --form-width: 50%;
+
+  --radius-1: 0.3rem;
+  --radius-2: 0.6rem;
+  --radius-3: 1rem;
+  --radius-4: 2rem;
+
+
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  box-sizing: border-box;
+}
+
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+body{
+  font-family: "Poppins", sans-serif;
+  background: var(--color-gray-100);
+  font-size: 0.9rem;
+  line-height: 1.6;
+  color: var(--color-gray-700);
+  display: flex;
+  flex-direction: column;
+}
+
+.main-content {
+  flex: 1;
+}
+
+a{
+  color: var(--color-gray-700);
+  text-decoration: none;
+}
+
+
+h1, h2, h3, h4, h5, h6 {
+  color: var(--color-gray-900);
+  line-height: 1.1;
+}
+
+h1 {
+  font-size: 2.2rem;
+}
+
+h2 {
+  font-size: 1.9rem;
+}
+
+h3 {
+  font-size: 1.3rem;
+  line-height: 1.25;
+}
+
+h4 {
+  font-size: 1.1rem;
+}
+
+h5 {
+  line-height: 1.4;
+}
+
+img {
+  display: block;
+  object-fit: cover;
+  width: 100%;
+}
+
+section {
+  margin-top: 6rem;
+}
+
+.container {
+  margin-inline: auto;
+}
+
+
+.btn.primary {
+  background: var(--color-primary);
+  color: var(--color-white);
+}
+
+.btn.category{
+  background: var(--color-bg);
+  color: var(--color-primary);
+  font-size: 0.75rem;
+  font-weight: 400;
+}
+
+.btn.sm {
+  font-size: 0.8rem;
+  padding: 0.3rem 0.7rem;
+  font-weight: 400;
+}
+
+.btn.danger {
+  background: var(--color-red);
+  color: var(--color-white);
+}
+
+
+.center {
+  text-align: center;
+  padding-top: 5rem;
+  margin-inline: center;
+  display: block;
+  width: 100%;
+}
+
+.error-page h2 {
+  margin-top: 3rem;
+}
+
+
+
+
+
+
+
